force-app/main/default/objects/Limits__c/Limits__c.object-meta.xml
<CustomObject>
    <label>Limits</label>
    <nameField>
        <label>Limits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>