force-app/main/default/objects/Limits__c/fields/Alert_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Alert_Threshold__c</fullName>
    <label>Alert Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>