force-app/main/default/objects/Limits__c/fields/Latest_Snap_Shot_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Latest_Snap_Shot_Consumption__c</fullName>
    <formula>IF ( Latest_Snap_Shot_Max_Value__c = 0 , 0,  Latest_Snap_Shot_Value__c /Latest_Snap_Shot_Max_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Snap Shot Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>