force-app/main/default/objects/Limits__c/fields/Latest_Snap_Shot_Value__c.field-meta.xml
<CustomField>
    <fullName>Latest_Snap_Shot_Value__c</fullName>
    <label>Latest Snap Shot Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>