force-app/main/default/objects/Limits__c/fields/Latest_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Latest_Snapshot__c</fullName>
    <label>Latest Snapshot</label>
    <summarizedField>Limit_Snapshot__c.CreatedDate</summarizedField>
    <summaryForeignKey>Limit_Snapshot__c.Limits__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>