force-app/main/default/objects/Limits__c/fields/Mute_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Mute_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute Alerts</label>
    <type>Checkbox</type>
</CustomField>