force-app/main/default/objects/Limits__c/fields/Next_Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Snapshot_Date__c</fullName>
    <formula>Latest_Snapshot__c +  (Scheduled_Period__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Snapshot Date</label>
    <type>DateTime</type>
</CustomField>