force-app/main/default/objects/Limits__c/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <label>Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>