force-app/main/default/objects/Limits__c/fields/Scheduled_Period__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Period__c</fullName>
    <label>Scheduled Period (Hours)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>